--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:layout_height="match_parent">
 
         <LinearLayout
@@ -43,6 +44,7 @@
                     android:paddingLeft="30dp"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
+                    android:textColor="@color/black"
                     android:gravity="center_vertical"
                     android:textSize="10dp"
                     android:text="选择城市"/>
