--- a/app/src/main/res/layout/dialog_exit.xml
+++ b/app/src/main/res/layout/dialog_exit.xml
@@ -6,6 +6,7 @@
     android:background="@drawable/pop_dialog_bg">
 
     <TextView
+        android:id="@+id/main_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
