--- a/app/src/main/res/layout/fragment_release.xml
+++ b/app/src/main/res/layout/fragment_release.xml
@@ -19,6 +19,7 @@
 
 
         <ImageView
+            android:background="@mipmap/camera1"
             android:layout_marginBottom="5dp"
             android:id="@+id/imageView2"
             android:layout_width="300dp"
