--- a/app/src/main/res/layout/list_item_city.xml
+++ b/app/src/main/res/layout/list_item_city.xml
@@ -13,6 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_margin="5dp"
         android:onClick="@{clickListener}"
         android:layout_height="40dp">
