--- a/app/src/main/res/layout/list_item_movies.xml
+++ b/app/src/main/res/layout/list_item_movies.xml
@@ -14,6 +14,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/account_background"
         android:layout_width="match_parent"
         android:onClick="@{clickListener}"
         android:layout_marginRight="10dp"
@@ -24,7 +25,7 @@
         <ImageView
             android:id="@+id/series_child_item_image"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="140dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:bindMoviesImage="@{asset.url}" />
@@ -36,6 +37,8 @@
             app:layout_constraintTop_toBottomOf="@id/series_child_item_image"
             android:text="@{asset.num}"
             android:textSize="20dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
