--- a/app/src/main/res/layout/dialog_pop.xml
+++ b/app/src/main/res/layout/dialog_pop.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Coming Soon"
+        android:text="请询问客服获取充值方式"
         android:textColor="#ff1493"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,10 +24,10 @@
         android:layout_marginTop="120dp"
         android:background="@drawable/dialog_btn_select"
         android:gravity="center"
-        android:text="确定"
+        android:text="联系客服"
         android:textAllCaps="true"
         android:textColor="@color/black"
-        android:textSize="15dp"
+        android:textSize="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
