--- a/app/src/main/res/drawable/ic_dashboard_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_dashboard_black_24dp.xml
@@ -1,9 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:viewportWidth="60"
+    android:viewportHeight="60">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M3,13h8L11,3L3,3v10zM3,21h8v-6L3,15v6zM13,21h8L21,11h-8v10zM13,3v6h8L21,3h-8z" />
+        android:fillColor="#000"
+        android:fillType="evenOdd"
+        android:pathData="M12.156,14h18.688c1.19,0 2.156,0.895 2.156,2v4c0,1.105 -0.965,2 -2.156,2H12.156C10.966,22 10,21.105 10,20v-4c0,-1.105 0.965,-2 2.156,-2zM29.156,26h18.688c1.19,0 2.156,0.895 2.156,2v4c0,1.105 -0.965,2 -2.156,2H29.156C27.966,34 27,33.105 27,32v-4c0,-1.105 0.965,-2 2.156,-2zM12.156,38h18.688c1.19,0 2.156,0.895 2.156,2v4c0,1.105 -0.965,2 -2.156,2H12.156C10.966,46 10,45.105 10,44v-4c0,-1.105 0.965,-2 2.156,-2zM38.21,14h9.58c1.22,0 2.21,0.895 2.21,2v4c0,1.105 -0.99,2 -2.21,2h-9.58c-1.22,0 -2.21,-0.895 -2.21,-2v-4c0,-1.105 0.99,-2 2.21,-2zM12.21,26h9.58c1.22,0 2.21,0.895 2.21,2v4c0,1.105 -0.99,2 -2.21,2h-9.58c-1.22,0 -2.21,-0.895 -2.21,-2v-4c0,-1.105 0.99,-2 2.21,-2zM38.21,38h9.58c1.22,0 2.21,0.895 2.21,2v4c0,1.105 -0.99,2 -2.21,2h-9.58c-1.22,0 -2.21,-0.895 -2.21,-2v-4c0,-1.105 0.99,-2 2.21,-2z" />
 </vector>
