--- a/app/src/main/res/drawable/ic_notifications_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_notifications_black_24dp.xml
@@ -1,9 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:viewportWidth="60"
+    android:viewportHeight="60">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M12,22c1.1,0 2,-0.9 2,-2h-4c0,1.1 0.89,2 2,2zM18,16v-5c0,-3.07 -1.64,-5.64 -4.5,-6.32L13.5,4c0,-0.83 -0.67,-1.5 -1.5,-1.5s-1.5,0.67 -1.5,1.5v0.68C7.63,5.36 6,7.92 6,11v5l-2,2v1h16v-1l-2,-2z" />
+        android:fillColor="#000"
+        android:fillType="evenOdd"
+        android:pathData="M33.811,13.39l-0.427,-1.707c-0.248,-0.99 -1.136,-1.683 -2.156,-1.683h-2.456c-1.02,0 -1.908,0.694 -2.156,1.684l-0.426,1.707c-1.902,0.434 -3.684,1.187 -5.284,2.2l-1.628,-0.977c-0.874,-0.525 -1.994,-0.388 -2.715,0.333l-1.616,1.617c-0.72,0.72 -0.859,1.84 -0.334,2.714l0.977,1.629c-1.012,1.6 -1.765,3.381 -2.2,5.283l-1.706,0.426c-0.99,0.248 -1.684,1.137 -1.684,2.157v2.455c0,1.02 0.694,1.908 1.683,2.156l1.708,0.426c0.434,1.902 1.187,3.683 2.199,5.283l-0.977,1.629c-0.525,0.874 -0.387,1.993 0.334,2.714l1.617,1.617c0.72,0.72 1.84,0.859 2.714,0.334l1.629,-0.977c1.6,1.012 3.381,1.765 5.283,2.2l0.426,1.706c0.248,0.99 1.137,1.684 2.157,1.684h2.455c1.02,0 1.908,-0.694 2.156,-1.683l0.426,-1.708c1.902,-0.434 3.683,-1.187 5.283,-2.199l1.629,0.977c0.874,0.524 1.994,0.387 2.715,-0.334l1.616,-1.617c0.72,-0.72 0.858,-1.84 0.334,-2.714l-0.977,-1.629c1.012,-1.6 1.765,-3.38 2.2,-5.283l1.707,-0.426c0.989,-0.248 1.683,-1.136 1.683,-2.156v-2.456c0,-1.02 -0.694,-1.909 -1.683,-2.156l-1.708,-0.427c-0.434,-1.902 -1.187,-3.683 -2.2,-5.283l0.977,-1.628c0.525,-0.874 0.387,-1.993 -0.334,-2.714l-1.615,-1.616c-0.721,-0.722 -1.84,-0.86 -2.715,-0.334l-1.628,0.976c-1.6,-1.012 -3.381,-1.765 -5.283,-2.2zM18,30c0,-6.627 5.373,-12 12,-12s12,5.373 12,12 -5.373,12 -12,12 -12,-5.373 -12,-12z" />
+
+    <path
+        android:fillColor="#000"
+        android:fillType="evenOdd"
+        android:pathData="M30,38c4.418,0 8,-3.582 8,-8s-3.582,-8 -8,-8 -8,3.582 -8,8 3.582,8 8,8z" />
 </vector>
