--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
             android:layout_width="0dp"
+            app:labelVisibilityMode="labeled"
             app:itemIconTint="@drawable/bottom_navigation_item_selector"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
