--- a/app/src/main/res/navigation/navigation_user.xml
+++ b/app/src/main/res/navigation/navigation_user.xml
@@ -112,10 +112,20 @@
     </fragment>
 
     <fragment
+        android:id="@+id/navigation_lives"
+        android:name="com.example.myplayer.ui.ChatFrahment"
+        tools:layout="@layout/fragment_chats"
+        android:label="Lives" />
+
+    <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.myplayer.ui.AccountFragment"
         tools:layout="@layout/fragment_account"
-        android:label="Account" />
+        android:label="Account" >
+        <action
+            android:id="@+id/action_navigation_notifications_to_navigation_lives"
+            app:destination="@id/navigation_lives" />
+    </fragment>
 
     <fragment
         android:id="@+id/city_fragment"
